overflow issue

--- a/css/style.scss
+++ b/css/style.scss
@@ -26,6 +26,10 @@ body {
   overflow-x: hidden;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 /*=====================================================
 Font Css
 ====================================================*/
